fix: scroll bar overlap issue

--- a/alchemy-20-front/components/Common/Common.module.css
+++ b/alchemy-20-front/components/Common/Common.module.css
@@ -5,6 +5,5 @@
   top: 0;
   left: 0;
   background-color: #303030;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
