--- a/alchemy-20-front/styles/About.module.css
+++ b/alchemy-20-front/styles/About.module.css
@@ -24,7 +24,8 @@
   top: 0;
   left: 0;
   z-index: 1;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .tri_tl {
