--- a/alchemy-20-front/styles/ComingSoon.module.css
+++ b/alchemy-20-front/styles/ComingSoon.module.css
@@ -24,6 +24,8 @@
   top: 0;
   left: 0;
   z-index: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .coming_soon_img {
