--- a/alchemy-20-front/styles/Home.module.css
+++ b/alchemy-20-front/styles/Home.module.css
@@ -3,6 +3,8 @@
   width: 100vw;
   height: 100vh;
   z-index: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .nav {
