--- a/alchemy-20-front/styles/Team.module.css
+++ b/alchemy-20-front/styles/Team.module.css
@@ -1,5 +1,4 @@
 .main {
-  margin-top: 70px;
   padding: 0;
   width: 100%;
   height: 100%;
@@ -7,11 +6,14 @@
   z-index: 1;
   top: 0;
   left: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .heading {
   margin-left: 20%;
   margin-right: 20%;
+  margin-top: 80px;
 }
 
 .heading p {
